--- a/static/css/main.css
+++ b/static/css/main.css
@@ -277,11 +277,12 @@ h2 {
         transform: translateX(-50%) translateY(-50%); }
 
 .modal-slider .modal-content {
-  padding: 30px;
   box-sizing: border-box; }
 
 .modal-slider .carousel-inner .item img {
-  max-width: 760px; }
+  max-width: 760px;
+  display: inline-block;
+  vertical-align: bottom; }
   @media (max-width: 1024px) {
     .modal-slider .carousel-inner .item img {
       max-width: 600px; } }
@@ -321,16 +322,17 @@ h2 {
   .modal.in .modal-dialog {
     transform: translate(-50%, -30%); }
   .modal .modal-container {
-    width: 800px;
+    width: 760px;
     margin: auto; }
     .modal .modal-container .title {
       font-size: 1.4em;
       margin-bottom: 2em; }
     @media (max-width: 1024px) {
       .modal .modal-container {
-        width: 100%; } }
+        max-width: 600px; } }
     @media (max-width: 767px) {
       .modal .modal-container {
+        width: 100%;
         height: 100%; } }
   .modal .modal-header {
     text-align: left;
@@ -342,7 +344,7 @@ h2 {
     top: 0;
     padding: 10px;
     cursor: pointer;
-    color: rgba(36, 36, 36, 0.5);
+    color: #fff;
     font-size: 26px;
     transition: color 0.25s ease-in-out; }
     .modal .close-btn:hover {
@@ -385,9 +387,6 @@ h2 {
   @media (max-width: 1024px) {
     .carousel {
       min-height: 300px; } }
-  @media (max-width: 767px) {
-    .carousel .carousel-inner .text-center {
-      padding: 10px; } }
 
 .carousel-control {
   font-size: 0;
@@ -399,17 +398,11 @@ h2 {
   width: 34px;
   height: 64px; }
   .carousel-control.left {
-    left: -25px;
+    left: 10px;
     transform: translateY(-50%); }
-    @media (max-width: 767px) {
-      .carousel-control.left {
-        left: -30px; } }
   .carousel-control.right {
-    right: -25px;
+    right: 10px;
     transform: translateY(-50%) rotate(180deg); }
-    @media (max-width: 767px) {
-      .carousel-control.right {
-        right: -30px; } }
 
 @media all and (transform-3d) {
   .carousel-inner > .item {
@@ -461,7 +454,13 @@ h2 {
   left: 100%; }
 
 .carousel-indicators {
-  margin-top: 30px; }
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  transform: translateX(-50%);
+  width: 100%; }
   .carousel-indicators li {
     width: 40px;
     height: 25px;
@@ -469,13 +468,13 @@ h2 {
     font-size: 0;
     color: transparent;
     cursor: pointer;
-    background-color: rgba(51, 51, 51, 0.1);
+    background: #fff;
     box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
     transition: background 1.1s ease-in-out;
     display: inline-block;
     vertical-align: middle; }
     .carousel-indicators li:hover .sr-only {
-      background-color: rgba(51, 51, 51, 0.1); }
+      background-color: rgba(51, 51, 51, 0.3); }
     .carousel-indicators li.active .sr-only {
       background-color: rgba(51, 51, 51, 0.5);
       width: 30px;
@@ -590,6 +589,9 @@ h2 {
 
 .gallery-fiveitem .picture {
   width: 20%; }
+  @media (max-width: 767px) {
+    .gallery-fiveitem .picture:last-child {
+      display: none; } }
 
 .gallery {
   margin: 0 0 60px 0; }
@@ -647,19 +649,31 @@ h2 {
   margin: 0 0 5px 0;
   padding: 0; }
 
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak,
+.ng-hide:not(.ng-hide-animate) {
+  display: none !important; }
+
+ng\:form {
+  display: block; }
+
 #contact-us {
   margin: 60px 0; }
-  #contact-us form {
+  #contact-us .content {
     margin: 0 60px 0 30px; }
     @media (max-width: 1024px) {
-      #contact-us form {
+      #contact-us .content {
         margin: 0 0 0 30px; } }
     @media (max-width: 767px) {
-      #contact-us form {
+      #contact-us .content {
         margin: 0; } }
-    #contact-us form.ng-submitted .custom-input.ng-invalid {
-      border-color: #fff;
-      box-shadow: inset 0 0 0 2px #ff5656 !important; }
+  #contact-us form.ng-submitted .custom-input.ng-invalid {
+    border-color: #fff;
+    box-shadow: inset 0 0 0 2px #ff5656 !important; }
   #contact-us .field {
     margin: 0 0 30px 0; }
   #contact-us .button {
@@ -675,19 +689,8 @@ h2 {
     padding: 0; }
   #contact-us .success-message {
     font-size: 1.1em;
-    line-height: 1.2; }
-
-[ng\:cloak],
-[ng-cloak],
-[data-ng-cloak],
-[x-ng-cloak],
-.ng-cloak,
-.x-ng-cloak,
-.ng-hide:not(.ng-hide-animate) {
-  display: none !important; }
-
-ng\:form {
-  display: block; }
+    line-height: 1.2;
+    margin: 30px 0; }
 
 .custom-input {
   font-size: 1em;
@@ -698,8 +701,9 @@ ng\:form {
   border: 1px solid #c2c2c2;
   width: 100%;
   box-sizing: border-box;
-  appearance: none;
-  line-height: 1; }
+  line-height: 1;
+  -webkit-appearance: none;
+  appearance: none; }
   .custom-input.placeholder, .custom-input:-moz-placeholder, .custom-input::-moz-placeholder, .custom-input::-webkit-input-placeholder, .custom-input::-ms-input-placeholder {
     color: #242424; }
   .custom-input:focus::-webkit-input-placeholder {
