--- a/static/scss/_bootstrap_carousel.scss
+++ b/static/scss/_bootstrap_carousel.scss
@@ -20,14 +20,13 @@
     min-height: 300px;
   }
 
-  .carousel-inner {
-    .text-center {
-      @include respond-to(mobile) {
-        padding: 10px;
-      }
-    }
-  }
-
+  //.carousel-inner {
+  //  .text-center {
+  //    @include respond-to(mobile) {
+  //      padding: 10px;
+  //    }
+  //  }
+  //}
 }
 
 .carousel-control {
@@ -41,18 +40,18 @@
   width: 34px;
   height: 64px;
   &.left {
-    left: -25px;
+    left: 10px;
     transform: translateY(-50%);
-    @media (max-width: $mobile) {
-      left: -30px;
-    }
+    //@media (max-width: $mobile) {
+    //  left: -30px;
+    //}
   }
   &.right {
-    right: -25px;
+    right: 10px;
     transform: translateY(-50%) rotate(180deg);
-    @media (max-width: $mobile) {
-      right: -30px;
-    }
+    //@media (max-width: $mobile) {
+    //  right: -30px;
+    //}
   }
 }
 
@@ -113,7 +112,13 @@
 }
 
 .carousel-indicators {
-  margin-top: 30px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  transform: translateX(-50%);
+  width: 100%;
   li {
     width: 40px;
     height: 25px;
@@ -123,14 +128,15 @@
     cursor: pointer;
 
     //background-color: lighten($color-default, 10%);
-    background-color: rgba(51,51,51,0.1);
+    //background-color: rgba(51,51,51,0.1);
+    background: #fff;
     box-shadow: 0 0 1px 1px rgba(0,0,0,.2);
     transition: background 1.1s ease-in-out;
     display: inline-block;
     vertical-align: middle;
     &:hover {
       .sr-only {
-        background-color: rgba(51,51,51,0.1);
+        background-color: rgba(51,51,51, 0.3);
         //background-color: lighten($color-default, 20%);
       }
     }
