--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,10 @@
                     </ul>
                 </menu>
                 <div class="button-container">
-                    <a href="#contact-us" class="button">{{ _('contact us') }}</a>
+                    <a
+                        href="#contact-us"
+                        scroll-to="#contact-us"
+                        class="button">{{ _('contact us') }}</a>
                 </div>
             </div>
         </header>
