--- a/static/css/main.css
+++ b/static/css/main.css
@@ -745,6 +745,8 @@ ng\:form {
     display: block;
     width: 78px;
     height: 78px; }
+    .info .tel-icon:hover {
+      text-decoration: none; }
     @media (max-width: 767px) {
       .info .tel-icon {
         margin: 0 auto 15px;
