--- a/static/scss/_contact-form.scss
+++ b/static/scss/_contact-form.scss
@@ -153,6 +153,9 @@ ng\:form {
     display: block;
     width: 78px;
     height: 78px;
+    &:hover {
+      text-decoration: none;
+    }
     @include respond-to(mobile) {
       margin: 0 auto 15px;
       background-position: center center;
