--- a/static/css/main.css
+++ b/static/css/main.css
@@ -531,6 +531,8 @@ h2 {
       line-height: 1.3;
       margin: 0 0 5px 0;
       padding: 0; }
+      .main .item .description p:first-child {
+        display: none; }
 
 #office-clean .item:before {
   background-position: 0px -517px;
