--- a/static/scss/_articles.scss
+++ b/static/scss/_articles.scss
@@ -29,11 +29,13 @@
     }
 
     .description {
-      //font-size: 1em;
       p {
         line-height: 1.3;
         margin: 0 0 5px 0;
         padding: 0;
+        &:first-child {
+          display: none;
+        }
       }
     }
   }
